--- a/src/css/template.css
+++ b/src/css/template.css
@@ -1,7 +1,7 @@
 body {
-  padding-top: 5rem;
+  padding-top: 4rem;
 }
 .starter-template {
-  padding: 3rem 1.5rem;
+  /* padding: 3rem 1.5rem; */
   text-align: center;
 }
